--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -14,5 +14,7 @@
     <h2>Instalación de Entornos de Desarrollo</h2>
     <h3>José Antonio Ruiz Castelló</h3>
     <p>Me he instalado el NetBeans 24 y el IntelliJ IDEA Community Edition 2024.3.1.1</p>
+    <img src="https://drive.google.com/file/d/1WH16D7KcZftlR9dOZqZzOvBfGMfrRE5-/view?usp=sharing"></img>
+    <img src="https://drive.google.com/file/d/1C-mmgeLV9mWmVqvGOfpiomn21KOYjfR0/view?usp=sharing"></img>
 </body>
 </html>
