--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -11,10 +11,10 @@
     <a href="https://www.youtube.com/watch?v=a13VvROaHtk&ab_channel=Jos%C3%A9ManuelDelPozoL%C3%B3pez">Video Story 1</a>
     <h2>Entornos de desarrollo</h2>
     <a href="https://youtu.be/gkgaFwV4MVU">Video Story 3</a>
-    <h2>Instalación de Entornos de Desarrollo</h2>
-    <h3>José Antonio Ruiz Castelló</h3>
-    <p>Me he instalado el NetBeans 24 y el IntelliJ IDEA Community Edition 2024.3.1.1</p>
-    <img src="https://drive.google.com/file/d/1WH16D7KcZftlR9dOZqZzOvBfGMfrRE5-/view?usp=sharing"></img>
-    <img src="https://drive.google.com/file/d/1C-mmgeLV9mWmVqvGOfpiomn21KOYjfR0/view?usp=sharing"></img>
+<h2> Instalación de Entornos de Desarrollo</h2>
+<h3> Jose Antonio Ruiz Trujillo</h3> 
+<p>Me he instalado el apache neatbeans la version 24 y el IntelliJ IDEA Community Edition la version 20243.1.1</p>
+ <img src="" alt="">
+    
 </body>
 </html>
