--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -16,5 +16,10 @@
     <p>Me he instalado el NetBeans 24 y el IntelliJ IDEA Community Edition 2024.3.1.1</p>
     <img src="https://drive.google.com/file/d/1WH16D7KcZftlR9dOZqZzOvBfGMfrRE5-/view?usp=sharing"></img>
     <img src="https://drive.google.com/file/d/1C-mmgeLV9mWmVqvGOfpiomn21KOYjfR0/view?usp=sharing"></img>
+    <h2> Instalación de Entornos de Desarrollo</h2>
+<h3> Jose Antonio Ruiz Trujillo</h3> 
+<p>Me he instalado el apache neatbeans la version 24 y el IntelliJ IDEA Community Edition la version 20243.1.1</p>
+ <img src="https://drive.google.com/file/d/1DJxTpzRRS7jNSTB_f_7dlkJ8nGVrQoo9/view?usp=sharing" alt="Caputra de intelliJ">
+ <img src="https://drive.google.com/file/d/1SQtEWVSa1bAesAH_NK7uoq78yo_haoFv/view?usp=sharing" alt="Captura de Apache de neatbeans">
 </body>
 </html>
