--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -21,5 +21,8 @@
 <p>Me he instalado el apache neatbeans la version 24 y el IntelliJ IDEA Community Edition la version 20243.1.1</p>
  <img src="https://drive.google.com/file/d/1DJxTpzRRS7jNSTB_f_7dlkJ8nGVrQoo9/view?usp=sharing" alt="Caputra de intelliJ">
  <img src="https://drive.google.com/file/d/1SQtEWVSa1bAesAH_NK7uoq78yo_haoFv/view?usp=sharing" alt="Captura de Apache de neatbeans">
+    <h2>Configuración de Entornos de Desarrollo</h2>
+    <h3>José Antonio Ruiz Castelló</h3>
+    <a href="https://docs.google.com/document/d/1bJUZFPy9Z0ZsWAr-yVzJCZbHdDo9dTx9sxSPUKwPmtE/edit?usp=sharing" target="_blank">Aquí estan las explicaciones de las extensiones con las imagenes correspondientes</a>
 </body>
 </html>
