--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -23,6 +23,6 @@
  <img src="https://drive.google.com/file/d/1SQtEWVSa1bAesAH_NK7uoq78yo_haoFv/view?usp=sharing" alt="Captura de Apache de neatbeans">
     <h2>Configuración de Entornos de Desarrollo</h2>
     <h3>José Antonio Ruiz Castelló</h3>
-    <a href="https://docs.google.com/document/d/1bJUZFPy9Z0ZsWAr-yVzJCZbHdDo9dTx9sxSPUKwPmtE/edit?usp=sharing" target="_blank">Aquí estan las explicaciones de las extensiones con las imagenes correspondientes</a>
+    <a href="https://docs.google.com/document/d/1bJUZFPy9Z0ZsWAr-yVzJCZbHdDo9dTx9sxSPUKwPmtE/edit?usp=sharing" target="_blank">Aquí estan las explicaciones de las extensiones con las imagenes correspondientes y la configuración del JDK</a>
 </body>
 </html>
