--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -24,7 +24,8 @@
     <h2>Configuración de Entornos de Desarrollo</h2>
     <h3>José Antonio Ruiz Castelló</h3>
     <a href="https://docs.google.com/document/d/1bJUZFPy9Z0ZsWAr-yVzJCZbHdDo9dTx9sxSPUKwPmtE/edit?usp=sharing" target="_blank">Aquí estan las explicaciones de las extensiones con las imagenes correspondientes</a>
-     <h3>Jose Antonio Ruiz Trujillo</h3>
+    <h2>Configuración de Entornos de Desarrollo</h2>
+    <h3>Jose Antonio Ruiz Trujillo</h3>
     <a href="https://docs.google.com/document/d/1IOBI7C8OMYBOetn-0rCQTil0TuX7e-GaS-3bpLrub20/edit?usp=sharing" target="_blank">Aquí estan las explicaciones de las extensiones y la configuracion explicada del jdk</a>
 
 </body>
