--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -28,5 +28,14 @@
     <h3>Jose Antonio Ruiz Trujillo</h3>
     <a href="https://docs.google.com/document/d/1IOBI7C8OMYBOetn-0rCQTil0TuX7e-GaS-3bpLrub20/edit?usp=sharing" target="_blank">Aquí estan las explicaciones de las extensiones y la configuracion explicada del jdk</a>
 
+    <h2> Instalación de Entornos de Desarrollo</h2>
+<h3>José Manuel Del Pozo López</h3>
+<p>He instalado el IntelliJ IDEA Community Edition y el NetBeans 24</p>
+    <a href="https://drive.google.com/file/d/1U1VHamGGSGFqF5YMofqKt8A0jrISeuJ4/view?usp=drive_link" target="_blank">Imagen IntelliJ </a>
+    <a href="https://drive.google.com/file/d/1FRYh8mn6f8U8mWgRRiQ6l8W0XTfxGIRJ/view?usp=drive_link" target="_blank"> Imagen Netbeans </a>
+  
+ <h2>Configuración de Entornos de Desarrollo</h2>
+    <a href="https://docs.google.com/document/d/1j57Cuz-6q8AsDkLDA1zOZhGB4VUo59AKbuptDtbt1CM/edit?usp=drive_link" target="_blank">Explicacion de extensiones y configuracion del JDK</a>
+
 </body>
 </html>
