--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -36,6 +36,14 @@
   
  <h2>Configuración de Entornos de Desarrollo</h2>
     <a href="https://docs.google.com/document/d/1j57Cuz-6q8AsDkLDA1zOZhGB4VUo59AKbuptDtbt1CM/edit?usp=drive_link" target="_blank">Explicacion de extensiones y configuracion del JDK</a>
+    <h2>Instalación Entronos de desarrollo</h2>
+    <h3>José Matés Porras</h3>
+    <p>He instalado netbeans version 24 y IntelliJ IDEA Community Edition version 2024 3.1.1</p>
+    <a src="https://drive.google.com/file/d/1CS5JDNl1jq4TNmXerrhzguuIaVbP_vxs/view?usp=sharing" target="_blank"> Imagen Intelli IDEA
+    <a href="https://drive.google.com/file/d/1BQyjWX7r1GqPybwx6UR5GbX_AK2odPFK/view?usp=sharing" target="_blank"> Imagen Neatbens
+    <h2>Configuración de Entornos de Desarrollo</h2>
+    <h3>José Matés Porras</h3>
+    <a href="https://docs.google.com/document/d/1njFiJh33ijHn1xw0Sy7YFxeoaIMSksUBuqy9THVET_g/edit?usp=sharing" target="_blank"> Aqui estan las extensiones y configuración JDK explicado</a>
 
 </body>
 </html>
