--- a/Entornos sprint 2/sprint2Entornos.html
+++ b/Entornos sprint 2/sprint2Entornos.html
@@ -45,5 +45,8 @@
     <h3>José Matés Porras</h3>
     <a href="https://docs.google.com/document/d/1njFiJh33ijHn1xw0Sy7YFxeoaIMSksUBuqy9THVET_g/edit?usp=sharing" target="_blank"> Aqui estan las extensiones y configuración JDK explicado</a>
 
+        <h2>Creación y ejecución de Proyectos JAVA, José Antonio Ruiz Castelló</h2>
+         <a href="https://drive.google.com/file/d/19qtVz1V6RnsA6Qr54QcG0o0beZUroOq3/view?usp=sharing" target="_blank"> Aqui está la imagen de la terminal</a>
+
 </body>
 </html>
